--- a/docs/METADATA.yaml
+++ b/docs/METADATA.yaml
@@ -4,15 +4,15 @@
 bbfNumber: TP-469
 bbfTitle: Conformance Test Plan for USP Agents
 bbfIssue: Issue
-bbfVersion: 1 Amendment 3
-bbfMonth: July
-bbfYear: 2024
+bbfVersion: 1 Amendment 3 Corrigendum 1
+bbfMonth: February
+bbfYear: 2025
 bbfType: ''
 bbfStatus: ''
 bbfContrib: ''
 bbfMajor: 1
 bbfMinor: 3
-bbfPatch: 0
+bbfPatch: 1
 bbfMicro: 0
 bbfExtra: 0
 bbfDraft: ''
