--- a/PROJECT.yaml
+++ b/PROJECT.yaml
@@ -16,6 +16,13 @@ resources:
     title: TP-469 Document
 
 versions:
+  v1.3.2:
+    date: 2025-05-19
+    title: |
+      [Release 1.3.2][TP-469 Amendment 3 Corrigendum 2]
+    changes: |
+      * Updates build version
+      * Reverts test 1.20 to version 1.2 of test plan
   v1.3.1:
     date: 2025-02-10
     title: |
