--- a/docs/METADATA-1.yaml
+++ b/docs/METADATA-1.yaml
@@ -4,15 +4,15 @@
 bbfNumber: TP-469
 bbfTitle: Conformance Test Plan for USP Agents
 bbfIssue: Issue
-bbfVersion: 1 Amendment 3 Corrigendum 2
-bbfMonth: May
+bbfVersion: 1 Amendment 4
+bbfMonth: November
 bbfYear: 2025
 bbfType: ''
 bbfStatus: ''
 bbfContrib: ''
 bbfMajor: 1
-bbfMinor: 3
-bbfPatch: 2
+bbfMinor: 4
+bbfPatch: 0
 bbfMicro: 0
 bbfExtra: 0
 bbfDraft: ''
